some changes added

--- a/oobject_detection_model_dashboard/index.html
+++ b/oobject_detection_model_dashboard/index.html
@@ -172,7 +172,7 @@
 
           <div class="ins-kichen-img-wrp">
             <img
-              src="/images/kichen.jpeg"
+              src="./images/kichen.jpeg"
               style="height: 100vh; width: 100%"
               alt=""
             />
